[tool.poetry]
name = "article_slackbot"
version = "0.1.0"
description = ""
authors = ["Ben Hill <benjamin.hill28@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
slack-sdk = "^3.8.0"
pytz = "^2021.1"
python-dateutil = "^2.8.2"
pytest = "^6.2.4"
pytest-mock = "^3.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
